{
    "name": "Rhythm Tactics",
    "maps": [
        {
            "name": "Player",
            "id": "8304e226-629f-4b21-b2fc-0780e4a8622d",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "15d419bc-4a7e-4afb-a4e3-54bf53314531",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "ad08ec64-9af7-4437-92b2-ca2482be3315",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "ebc1a66e-1ef9-4e2d-95b0-ddcaa2541afa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveUp",
                    "type": "Button",
                    "id": "2df5b578-8894-4b91-8018-fc81c3f276ad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveDown",
                    "type": "Button",
                    "id": "13677fa0-1d3f-4c03-807d-f7e3aa639809",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "523149ff-36d8-4f13-a26b-c67324e0fa57",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "11e082d3-d83e-40ac-bdff-8a40c587ef67",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76e98f46-7599-45df-aefb-406001ef08d4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df5e7554-6c68-411e-b084-e5616044da63",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "241ad312-1c40-422e-ac1b-b22547f0f5bd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "2df7bf39-36d5-4f6b-af00-aa9077ecd438",
            "actions": [
                {
                    "name": "Navigate",
                    "type": "Value",
                    "id": "676b2720-3bd0-47cd-a7ea-c2da7170bc46",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "7c063e0e-b0fa-4ce4-bb0e-2e250920bd99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "18d1d8f5-a466-44cd-acea-7dd9d5caca96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "f15a097e-ba1b-4a6e-b67d-f3bf84a991a1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "9b23048a-7dc8-4ad7-84a3-733d58ac2951",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ScrollWheel",
                    "type": "PassThrough",
                    "id": "95dc7082-e863-4c17-866e-1a5867ca5602",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MiddleClick",
                    "type": "PassThrough",
                    "id": "c68998eb-f287-4bdf-8f6d-b7adeb41f0f6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClick",
                    "type": "PassThrough",
                    "id": "09c608b7-c3aa-44a0-b1e8-b8115b490b8e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TrackedDevicePosition",
                    "type": "PassThrough",
                    "id": "5d0c6715-f1b9-4270-a5d8-5eb3065a25c7",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TrackedDeviceOrientation",
                    "type": "PassThrough",
                    "id": "9242185f-f51a-4082-975a-784f44f3479d",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Gamepad",
                    "id": "809f371f-c5e2-4e7a-83a1-d867598f40dd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "14a5d6e8-4aaf-4119-a9ef-34b8c2c548bf",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "9144cbe6-05e1-4687-a6d7-24f99d23dd81",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2db08d65-c5fb-421b-983f-c71163608d67",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "58748904-2ea9-4a80-8579-b500e6a76df8",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8ba04515-75aa-45de-966d-393d9bbd1c14",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "712e721c-bdfb-4b23-a86c-a0d9fcfea921",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fcd248ae-a788-4676-a12e-f4d81205600b",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1f04d9bc-c50b-41a1-bfcc-afb75475ec20",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fb8277d4-c5cd-4663-9dc7-ee3f0b506d90",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Gamepad",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Joystick",
                    "id": "e25d9774-381c-4a61-b47c-7b6b299ad9f9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3db53b26-6601-41be-9887-63ac74e79d19",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0cb3e13e-3d90-4178-8ae6-d9c5501d653f",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0392d399-f6dd-4c82-8062-c1e9c0d34835",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "942a66d9-d42f-43d6-8d70-ecb4ba5363bc",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Joystick",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "ff527021-f211-4c02-933e-5976594c46ed",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "563fbfdd-0f09-408d-aa75-8642c4f08ef0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "eb480147-c587-4a33-85ed-eb0ab9942c43",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "2bf42165-60bc-42ca-8072-8c13ab40239b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "85d264ad-e0a0-4565-b7ff-1a37edde51ac",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "74214943-c580-44e4-98eb-ad7eebe17902",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cea9b045-a000-445b-95b8-0c171af70a3b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8607c725-d935-4808-84b1-8354e29bab63",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4cda81dc-9edd-4e03-9d7c-a71a14345d0b",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9e92bb26-7e3b-4ec4-b06b-3c8f8e498ddc",
                    "path": "*/{Submit}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82627dcc-3b13-4ba9-841d-e4b746d6553e",
                    "path": "*/{Cancel}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c52c8e0b-8179-41d3-b8a1-d149033bbe86",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1394cbc-336e-44ce-9ea8-6007ed6193f7",
                    "path": "<Pen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5693e57a-238a-46ed-b5ae-e64e6e574302",
                    "path": "<Touchscreen>/touch*/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4faf7dc9-b979-4210-aa8c-e808e1ef89f5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d66d5ba-88d7-48e6-b1cd-198bbfef7ace",
                    "path": "<Pen>/tip",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47c2a644-3ebc-4dae-a106-589b7ca75b59",
                    "path": "<Touchscreen>/touch*/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb9e6b34-44bf-4381-ac63-5aa15d19f677",
                    "path": "<XRController>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38c99815-14ea-4617-8627-164d27641299",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24066f69-da47-44f3-a07e-0015fb02eb2e",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c191405-5738-4d4b-a523-c6a301dbf754",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7236c0d9-6ca3-47cf-a6ee-a97f5b59ea77",
                    "path": "<XRController>/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "TrackedDevicePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23e01e3a-f935-4948-8d8b-9bcac77714fb",
                    "path": "<XRController>/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "TrackedDeviceOrientation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}